--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Informatik Note</title>
+    <title>Gib Mir $$$</title>
     <style>
         body {
             display: flex;
@@ -43,16 +43,29 @@
             font-size: 0.8em;
             color: #888;
         }
+        .danke-message {
+            display: none;
+            font-size: 3em;
+            color: #4CAF50;
+            margin-top: 20px;
+        }
     </style>
+    <script>
+        function showDanke() {
+            document.querySelector('.container').style.display = 'none';
+            document.querySelector('.danke-message').style.display = 'block';
+        }
+    </script>
 </head>
 <body>
     <div class="container">
-        <h1>Leonhard, Kanst du mir 100.000.000€ geben?</h1>
+        <h1>Kanst du mir 100.000.000€ geben?</h1>
         <div class="button-container">
-            <button>Ja</button>
-            <button>Ja</button>
+            <button onclick="showDanke()">Ja</button>
+            <button onclick="showDanke()">Ja</button>
         </div>
     </div>
+    <div class="danke-message">Danke</div>
     <footer>Abdoalrahman Abboud Almohamad 2024</footer>
 </body>
 </html>
